# annealing

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  annealing.c  annealing.h  annealing.texi  autogen.sh  basic_annealing.c  compute_outer_iterations.c  config.h.in  configure  configure.ac  configure.sh  gsl_annealing.h  manytries_annealing.c  multibest_annealing.c  prepare.sh  test_fitting.c  test_many_sinc.c  test_multi_sinc.c  test_sinc.c  test_sinxy.c  test_tsp.c
configuration/: Makefile.ds.in  Makefile.variables.in  configure.ds  project.make
doc/: annealing.texi  gpl.texiinc  overview-linking.texi
examples/c-project/: Makefile.am  Makefile.in  README  aclocal.m4  annealing.m4  config.h.in  configure  configure.ac  fitting.c  many_sinc.c  multi_sinc.c
examples/c-project/configuration/: project.make
examples/c-project/infrastructure/: develstuff.make
examples/c-project/src/: many_sinc.c  multi_sinc.c  sinc.c  tsp.c
examples/cplusplus-project/: Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  internal.hpp  main.cpp  simple_wrapper.cpp  simple_wrapper.hpp  sinc.cpp  sinc.cxx  sinc.hpp  univariate_minimisation.cpp  univariate_minimisation.hpp
examples/cplusplus-project/src/: internal.hpp  main.cpp  numbers_generator.hpp  simple_wrapper.cpp  simple_wrapper.hpp  sinc.hpp  univariate_minimisation.cpp  univariate_minimisation.hpp
examples/cxx-project/: Makefile.am  README  configure.ac
examples/cxx-project/configuration/: project.make
examples/cxx-project/src/: main.cpp  numbers_generator.cpp  simple_wrapper.cpp  simple_wrapper.hpp  sinc.cpp  sinc.hpp
examples/cxxproject/: aclocal.m4  config.h.in  configure.ac  prepare.sh
examples/cxxproject/configuration/: project.make
examples/cxxproject/infrastructure/: develstuff.make  develstuff.texi
infrastructure/: Makefile.library.in  develstuff.autoconf  develstuff.make  develstuff.texi  make-configure-ac.sh
meta/: annealing-config.in  annealing.pc.in
meta/autoconf/: annealing.m4
meta/scripts/: annealing.pc.in
meta/slackware/: slack-desc.in
meta/slackware/dev/: slack-desc.in
meta/slackware/doc/: slack-desc.in
meta/travis-ci/: install-gsl.sh
src/: annealing-basic.c  annealing-internals.h  annealing-manytries.c  annealing-multibest.c  annealing-version.c  annealing.h  basic.c  internal.h  manytries.c  misc.c  multibest.c
src/lib/: annealing.h
src/other/: compute_outer_iterations.c
tests/: fitting.c  many_sinc.c  multi_sinc.c  sinc.c  sinxy.c  tsp.c  version.c
