dnl @configure_input@
dnl

AC_INIT([c-project],[2.0],[marcomaggi@gna.org])
DS_BEGIN([./src/fitting.c])

DS_EXCLUDE_SECTION([DOC_RULES])
DS_EXCLUDE_SECTION([DEV_RULES])
DS_EXCLUDE_SECTION([GENERIC_DOCUMENTATION])
DS_EXCLUDE_SECTION([TEXINFO_DOCUMENTATION])
DS_EXCLUDE_SECTION([UNINSTALL_SCRIPTS])
DS_EXCLUDE_SECTION([META_SCRIPTS])
DS_EXCLUDE_SECTION([PKGCONFIG])
DS_EXCLUDE_SECTION([AUTOCONF])
DS_EXCLUDE_SECTION([CONFIG_INSPECTION_SCRIPT])
DS_EXCLUDE_SECTION([BINARY_DISTRIBUTION])
DS_EXCLUDE_SECTION([SLACKWARE_DISTRIBUTION])

DS_C99_LANGUAGE_COMMON_SETUP
AX_PATH_GSL(1.9)
ANNEALING_LIBRARY(1)
DS_END

dnl end of file
